tests/errors/array_index_out_of_bounds.orus
let arr: [i32; 3] = [1, 2, 3]
print(arr[3])
